--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,15 @@
   <head>
     <title>Prdy</title>
     <%= csrf_meta_tags %>
-
+    <meta name="viewport" content="width=device-diwth, initial-scale=1.0">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <%= yield %>
+<%=render 'layouts/header' %>
+<div class = "container">
+	<%=yield %>
+</div>
   </body>
 </html>
