big push to heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Prdy</title>
+    <title>PRDY - A PM PRD Tool</title>
     <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-diwth, initial-scale=1.0">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -13,5 +13,6 @@
 <div class = "container">
 	<%=yield %>
 </div>
+<!--<%=render 'pages/footer' %>-->
   </body>
 </html>
