--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class = "jumbotron">
-	<center><h1>Organize Your Spec Efforts</h1><br>
-	It's free to join and use. <%= link_to "Sign Up Here", "", class: "btn btn-warning"%></center>
+	<center><h1><b>Product Spec Docs</b> are <u>Hard</u></h1>
+	<h3>Get the tool that brings seamless organization <br>and simplicity to Product Managers. </h3>Free. Unlimited PRD's. Solid Templates. Easy to Store, Find, and Share.<br><br><%= link_to "Join Now", "", class: "btn btn-warning btn-lg"%></center>
 </div>
