--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,14 @@
-<div class = "jumbotron">
-	<center><h1><b>Product Spec Docs</b> are <u>Hard</u></h1>
-	<h3>Get the tool that brings seamless organization <br>and simplicity to Product Managers. </h3>Free. Unlimited PRD's. Solid Templates. Easy to Store, Find, and Share.<br><br><%= link_to "Join Now", "", class: "btn btn-warning btn-lg"%></center>
+
+
+<div class="jumbotron center">
+     <center><h1><b>Product Spec Docs</b> are <u>Hard</u></h1>
+     	<h3>Get the tool that brings seamless organization <br>and simplicity to Product Managers. </h3>Free. Unlimited PRD's. Solid Templates. Easy to Store, Find, and Share.<br><br>
+     <% if user_signed_in? %>
+          # do something
+     <% else %>
+       <p>
+         <%= link_to "Log in", new_user_session_path, class: "btn btn-default btn-lg" %>
+         <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
+       </p>
+  <% end %>  </center>
 </div>
