--- a/app/views/prds/index.html.erb
+++ b/app/views/prds/index.html.erb
@@ -6,20 +6,9 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th>Targetreleaseversion</th>
-      <th>Dateexpectedstartwork</th>
-      <th>Documentstatus</th>
-      <th>Documentowner</th>
-      <th>Designerowner</th>
-      <th>Developerowner</th>
-      <th>Qaowner</th>
-      <th>Goals</th>
-      <th>Backgroundstrategicfit</th>
-      <th>Assumptions</th>
-      <th>Requirements</th>
-      <th>Userinteractionnotes</th>
-      <th>Questions</th>
-      <th>Notdoing</th>
+      <th>Release Version</th>
+      <th>Status</th>
+      <th>PRD Owner</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -29,22 +18,11 @@
       <tr>
         <td><%= prd.title %></td>
         <td><%= prd.targetReleaseVersion %></td>
-        <td><%= prd.dateExpectedStartWork %></td>
         <td><%= prd.documentStatus %></td>
         <td><%= prd.documentOwner %></td>
-        <td><%= prd.designerOwner %></td>
-        <td><%= prd.developerOwner %></td>
-        <td><%= prd.qaOwner %></td>
-        <td><%= prd.goals %></td>
-        <td><%= prd.backgroundStrategicFit %></td>
-        <td><%= prd.assumptions %></td>
-        <td><%= prd.requirements %></td>
-        <td><%= prd.userInteractionNotes %></td>
-        <td><%= prd.questions %></td>
-        <td><%= prd.notDoing %></td>
         <td><%= link_to 'Show', prd %></td>
         <td><%= link_to 'Edit', edit_prd_path(prd) %></td>
-        <td><%= link_to 'Destroy', prd, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', prd, method: :delete, data: { confirm: 'Wow, you really want to delete your hard work?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -52,4 +30,7 @@
 
 <br>
 
-<%= link_to 'New Prd', new_prd_path %>
+<% if user_signed_in? %>  <%= link_to '+ New PRD', new_prd_path %>
+<% end %>
+
+
