--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,3 +24,4 @@
 </nav>
 
        
+       rails generate scaffold prd title:string targetReleaseVersion:string dateExpectedStartWork:date documentStatus:string documentOwner:string designerOwner:string developerOwner:string qaOwner:string goals:text backgroundStrategicFit:text assumptions:text requirements:text userInteractionNotes:text questions:text notDoing:text
