--- a/app/views/prds/index.html.erb
+++ b/app/views/prds/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Prds</h1>
+<h1>Product Requirement Docs</h1>
 
 <table>
   <thead>
@@ -26,7 +26,6 @@
         <td><%= link_to 'Edit', edit_prd_path(prd) %></td>
         <td><%= link_to 'Destroy', prd, method: :delete, data: { confirm: 'Wow, you really want to delete your hard work?' } %></td>
         <% end %>
-
       </tr>
     <% end %>
   </tbody>
