--- a/app/views/prds/show.html.erb
+++ b/app/views/prds/show.html.erb
@@ -75,5 +75,5 @@
   <%= @prd.notDoing %>
 </p>
 
-<%= link_to 'Edit', edit_prd_path(@prd) %> |
+<% if @prd.user == current_user %>  <%= link_to 'Edit', edit_prd_path(@prd) %><% end %>
 <%= link_to 'Back', prds_path %>
