--- a/app/views/docs/_form.html.erb
+++ b/app/views/docs/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: @prds, local: true) do |form| %>
-  <% if @prds.errors.any? %>
+<%= form_with(model: doc, local: true) do |form| %>
+  <% if doc.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@prds.errors.count, "error") %> prohibited this prd from being saved:</h2>
+      <h2><%= pluralize(doc.errors.count, "error") %> prohibited this doc from being saved:</h2>
 
       <ul>
-      <% @prds.errors.full_messages.each do |message| %>
+      <% doc.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -13,77 +13,77 @@
 
   <div class="field">
     <%= form.label :title %>
-    <%= form.text_field :title, id: :prd_title %>
+    <%= form.text_field :title, id: :doc_title %>
   </div>
 
   <div class="field">
     <%= form.label :targetReleaseVersion %>
-    <%= form.text_field :targetReleaseVersion, id: :prd_targetReleaseVersion %>
+    <%= form.text_field :targetReleaseVersion, id: :doc_targetReleaseVersion %>
   </div>
 
   <div class="field">
     <%= form.label :dateExpectedStartWork %>
-    <%= form.date_select :dateExpectedStartWork, id: :prd_dateExpectedStartWork %>
+    <%= form.date_select :dateExpectedStartWork, id: :doc_dateExpectedStartWork %>
   </div>
 
   <div class="field">
     <%= form.label :documentStatus %>
-    <%= form.text_field :documentStatus, id: :prd_documentStatus %>
+    <%= form.text_field :documentStatus, id: :doc_documentStatus %>
   </div>
 
   <div class="field">
     <%= form.label :documentOwner %>
-    <%= form.text_field :documentOwner, id: :prd_documentOwner %>
+    <%= form.text_field :documentOwner, id: :doc_documentOwner %>
   </div>
 
   <div class="field">
     <%= form.label :designerOwner %>
-    <%= form.text_field :designerOwner, id: :prd_designerOwner %>
+    <%= form.text_field :designerOwner, id: :doc_designerOwner %>
   </div>
 
   <div class="field">
     <%= form.label :developerOwner %>
-    <%= form.text_field :developerOwner, id: :prd_developerOwner %>
+    <%= form.text_field :developerOwner, id: :doc_developerOwner %>
   </div>
 
   <div class="field">
     <%= form.label :qaOwner %>
-    <%= form.text_field :qaOwner, id: :prd_qaOwner %>
+    <%= form.text_field :qaOwner, id: :doc_qaOwner %>
   </div>
 
   <div class="field">
     <%= form.label :goals %>
-    <%= form.text_area :goals, id: :prd_goals %>
+    <%= form.text_area :goals, id: :doc_goals %>
   </div>
 
   <div class="field">
     <%= form.label :backgroundStrategicFit %>
-    <%= form.text_area :backgroundStrategicFit, id: :prd_backgroundStrategicFit %>
+    <%= form.text_area :backgroundStrategicFit, id: :doc_backgroundStrategicFit %>
   </div>
 
   <div class="field">
     <%= form.label :assumptions %>
-    <%= form.text_area :assumptions, id: :prd_assumptions %>
+    <%= form.text_area :assumptions, id: :doc_assumptions %>
   </div>
 
   <div class="field">
     <%= form.label :requirements %>
-    <%= form.text_area :requirements, id: :prd_requirements %>
+    <%= form.text_area :requirements, id: :doc_requirements %>
   </div>
 
   <div class="field">
     <%= form.label :userInteractionNotes %>
-    <%= form.text_area :userInteractionNotes, id: :prd_userInteractionNotes %>
+    <%= form.text_area :userInteractionNotes, id: :doc_userInteractionNotes %>
   </div>
 
   <div class="field">
     <%= form.label :questions %>
-    <%= form.text_area :questions, id: :prd_questions %>
+    <%= form.text_area :questions, id: :doc_questions %>
   </div>
 
   <div class="field">
     <%= form.label :notDoing %>
-    <%= form.text_area :notDoing, id: :prd_notDoing %>
+    <%= form.text_area :notDoing, id: :doc_notDoing %>
   </div>
 
   <div class="actions">
