--- a/app/views/docs/new.html.erb
+++ b/app/views/docs/new.html.erb
@@ -1,5 +1,11 @@
+<div class = "panel panel-default">
+  <div class = "panel-heading">
 <h1>New Doc</h1>
+</div>
+<div class = "panel-body">
 
 <%= render 'form', doc: @doc %>
-
+</div>
+<div class = "panel-footer">
 <%= link_to 'Back', docs_path %>
+</div>
