--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">PRDY - A PM PRD Tool</a>
+    <a class="navbar-brand" href="/">PRDY</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -15,9 +15,9 @@
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
       <li><%= link_to "Settings", edit_user_registration_path %></li>
-<li><%= link_to "Sign out", destroy_user_session_path, :method => :delete %> </li>
+<li><%= link_to "Sign out", destroy_user_session_path%> </li>
         <% else %>
-          <li><%= link_to "Sign in", new_user_session_path %></li>
+          <li><%= link_to "Sign in", new_user_session_path%></li>
         <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
