--- a/app/views/docs/index.html.erb
+++ b/app/views/docs/index.html.erb
@@ -1,4 +1,4 @@
-<%if notice=""%> <div class="alert alert-info" role="alert"><%= notice %></div> <%end%>
+<div class="alert alert-info" role="alert"><%= notice %></div>
 <div class = "panel panel-default">
   <div class = "panel-heading">
 
