--- a/app/views/docs/index.html.erb
+++ b/app/views/docs/index.html.erb
@@ -1,10 +1,9 @@
-
+<p id="notice"><%= notice %></p>
 <div class = "panel panel-default">
   <div class = "panel-heading">
-
-<h1>PRDs</h1></div>
+<h1>Spec Docs:</h1></div>
 <div class = "panel-body">
-    <table class = "table table-default">   
+    <table class = "table table-default">
       <thead>
     <tr>
       <th>Feature Title</th>
