--- a/app/views/docs/_form.html.erb
+++ b/app/views/docs/_form.html.erb
@@ -33,19 +33,19 @@
 <div class="form-row">
 <div class="form-group col-md-3 mb-3">
     <%= form.label "Document Owner:"%>
-    <%= form.text_field :documentOwner, id: :doc_documentOwner, class: "form-control" %>
+    <%= form.text_field :documentOwner, id: :doc_documentOwner, placeholder:"@Zac Campbell",class: "form-control" %>
 </div>
   <div class="form-group col-md-3 mb-3">
     <%= form.label "Lead Designer:"%>
-    <%= form.text_field :designerOwner, id: :doc_designerOwner, class: "form-control" %>
+    <%= form.text_field :designerOwner, id: :doc_designerOwner, placeholder:"@Todd Ridley", class: "form-control" %>
   </div>
 <div class="form-group col-md-3 mb-3 ">
     <%= form.label "Lead Developer:"%>
-    <%= form.text_field :developerOwner, id: :doc_developerOwner, class: "form-control" %>
+    <%= form.text_field :developerOwner, id: :doc_developerOwner,placeholder:"@Brian Vosicky",class: "form-control" %>
   </div>
 <div class="form-group col-md-3 mb-3">
     <%= form.label "Lead QA:" %>
-    <%= form.text_field :qaOwner, id: :doc_qaOwner, class: "form-control" %>
+    <%= form.text_field :qaOwner, id: :doc_qaOwner,placeholder:"@John Navara", class: "form-control" %>
   </div></div>
   <div class="form-row">
   <div class="form-group col-md-12">
