administration added to site

--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,3 +1,2 @@
- <center><nav class="navbar fixed-bottom navbar-light bg-light">
- <a class="navbar-brand" href="#">PRDY</a>
-</nav></center>
+ </br></br>
+ <center><p><a href="/">©2018 PRDY | A Product Manager's Tool | Built with <span class="glyphicon glyphicon-heart"></span> in Detroit</a></p></center>
