--- a/app/views/docs/index.html.erb
+++ b/app/views/docs/index.html.erb
@@ -1,16 +1,16 @@
 <p id="notice"><%= notice %></p>
 <div class = "panel panel-default">
   <div class = "panel-heading">
-<h1>Spec Docs:</h1></div>
+<h1>Your Spec Docs:</h1></div>
 <div class = "panel-body">
     <table class = "table table-default">
       <thead>
     <tr>
       <th>Feature Title</th>
-      <th>Release Version</th>
-      <th>Release Date</th>
-      <th>Status</th>
-      <th>Doc Owner Email</th>
+  
+      <th>Target Release Date</th>
+      <th>Current Status</th>
+      <th>Priority</th>
     </tr>
   </thead>
 
@@ -20,10 +20,10 @@
     <% if doc.user == current_user %> 
       <tr>
         <td><%= doc.title %></td>
-        <td><%= doc.targetReleaseVersion %></td>
+
         <td><%= doc.dateExpectedStartWork %></td>
-        <td><%= doc.documentStatus %></td>
-        <td><%= doc.user.try(:email) %></td>
+        <td><%= doc.documentStatus%></td>
+        <td><%= doc.qaOwner  %></td>
         <td><%= link_to 'View', doc, class: "btn btn-warning" %></td>
         <td><%= link_to 'Edit', edit_doc_path(doc),  class: "btn btn-light"%> </td>
         <td><%= link_to doc, :method => :delete, data: {confirm: 'You are about to delete a PRD, are you sure you want to continue?'} do%><span class = "glyphicon glyphicon-trash"></span></td><% end %>
@@ -38,3 +38,4 @@
 <% if user_signed_in? %><%= link_to '+ Create a New PRD', new_doc_path, class: "btn btn-success btn-lg" %><% end %></div></div>
 <div class="center">
 </div>
+<%=render 'pages/footer' %>
