--- a/app/views/docs/_form.html.erb
+++ b/app/views/docs/_form.html.erb
@@ -44,7 +44,7 @@
     <%= form.text_field :developerOwner, id: :doc_developerOwner,placeholder:"@Brian Vosicky",class: "form-control" %>
   </div>
 <div class="form-group col-md-3 mb-3">
-    <%= form.label "Overall Priority" %>
+    <%= form.label "Overall Priority:" %>
     <%= form.text_field :qaOwner, id: :doc_qaOwner,placeholder:"p0-p5", class: "form-control" %>
   </div></div>
   <div class="form-row">
