--- a/app/views/docs/new.html.erb
+++ b/app/views/docs/new.html.erb
@@ -1,6 +1,6 @@
 <div class = "panel panel-default">
   <div class = "panel-heading">
-<h1>New PRD</h1>
+<h1>Creating a New PRD</h1>
 </div>
 <div class = "panel-body">
 
