--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,15 @@
     <meta name="viewport" content="width=device-diwth, initial-scale=1.0">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag  'application' %>
-    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-126183177-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-126183177-1');
+</script>
   </head>
 
   <body>
@@ -14,6 +22,5 @@
 <div class = "container">
 	<%=yield %>
 </div>
-<!--<%=render 'pages/footer' %>-->
   </body>
 </html>
