--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <div class="jumbotron center">
      <% if user_signed_in?%>
-     <center><br><h2><b>Welcome back!</h2></center><br><!--<p>We've been keeping the lights on while you've been away. Your spec docs are safe with us here. If you ever need a blank download of yours click here. </p>--><br>
+     <center><br><h2><b>Welcome back!</b></h2></center><br><!--<p>We've been keeping the lights on while you've been away. Your spec docs are safe with us here. If you ever need a blank download of yours click here. </p>--><br>
       <% else %>
       <center><h1><b>Product Spec Docs</b> are <u>Hard</u></h1>
       <h3>Get the tool that brings seamless organization <br>and simplicity to Product Managers. </h3>Free. Unlimited PRD's. Solid Templates. Easy to Store, Find, and Share.<br><br></center>
