--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PRDY - A PM PRD Tool</title>
+    <title>PRDY - A Handy Little Tool For Product Managers</title>
     <%= csrf_meta_tags %>
+    <meta name="keywords" content="Tools for product managers, tools for product management, Product Requirement Doc, PRD, Make Spec Docs, Spec Docs, Product Manager, Product Management, Startup">
+    <meta name="description" content="PRDY is a free and easy way to organize and keep track of your Product Requirement Docs, or PRDs. Product teams are more popular than ever, and staying on track with key features in competitive conditions can be fierce. PRDY helps you prioritize your product features. It's a tool for product managers that is simple and free to use.">
+    <link rel="cannonical" href="https://prdy.xyz"/>
     <meta name="viewport" content="width=device-diwth, initial-scale=1.0">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag  'application' %>
+    <link rel="icon" href="https://b.kisscc0.com/20180814/hjq/kisscc0-lightning-strike-electricity-computer-icons-drawin-lightning-bolt-refixed-5b73074a2d9af5.4123052315342651621868.png" type="image/x-icon" />
+    
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126183177-1"></script>
 <script>
