--- a/app/views/docs/_form.html.erb
+++ b/app/views/docs/_form.html.erb
@@ -10,6 +10,7 @@
       <% end %>
       </ul>
     </div>
+
   <% end %>
 <form class="needs-validation" novalidate>
   <div class="form-row">
@@ -33,18 +34,19 @@
 <div class="form-row">
 <div class="form-group col-md-3 mb-3">
     <%= form.label "Document Owner:"%>
-    <%= form.text_field :documentOwner, id: :doc_documentOwner, placeholder:"@Zac Campbell",class: "form-control" %>
+    <%= form.text_field :documentOwner, id: :doc_documentOwner, placeholder:"@",class: "form-control" %>
 </div>
   <div class="form-group col-md-3 mb-3">
     <%= form.label "Lead Designer:"%>
-    <%= form.text_field :designerOwner, id: :doc_designerOwner, placeholder:"@Todd Ridley", class: "form-control" %>
+    <%= form.text_field :designerOwner, id: :doc_designerOwner, placeholder:"@", class: "form-control" %>
   </div>
 <div class="form-group col-md-3 mb-3 ">
     <%= form.label "Lead Developer:"%>
-    <%= form.text_field :developerOwner, id: :doc_developerOwner,placeholder:"@Brian Vosicky",class: "form-control" %>
+    <%= form.text_field :developerOwner, id: :doc_developerOwner,placeholder:"@",class: "form-control" %>
   </div>
 <div class="form-group col-md-3 mb-3">
-    <%= form.label "Overall Priority:" %>
+    <a href=https://www.atlassian.com/blog/jira-software/organizing-issues-priority-optimize-delivery"<%= form.label "Overall Priority (view definitions):" %></a>
+</button>
     <%= form.text_field :qaOwner, id: :doc_qaOwner,placeholder:"p0-p5", class: "form-control" %>
   </div></div>
   <div class="form-row">
@@ -89,4 +91,9 @@
 </div></div>
 <% end %>
 </form>
+
+
+
+
+
 
