--- a/app/views/docs/_form.html.erb
+++ b/app/views/docs/_form.html.erb
@@ -19,7 +19,7 @@
     <%= form.text_field :title, id: :doc_title, class: "form-control" %>
   </div>
 <div class="form-group col-md-4 mb-3">
-    <%= form.label "Release Version (Expected):"%>
+    <%= form.label "Development Begins (Tentative):"%>
     <%= form.text_field :targetReleaseVersion, id: :doc_targetReleaseVersion, class: "form-control" %>
   </div>
 <!--<div class="form-group col-md-4 mb-3">
