--- a/app/views/docs/index.html.erb
+++ b/app/views/docs/index.html.erb
@@ -8,7 +8,7 @@
     <tr>
       <th>Feature Title</th>
   
-      <th>Target Release Date</th>
+      <th>Development Starts (tentative)</th>
       <th>Current Status</th>
       <th>Priority</th>
     </tr>
