fix admin access

--- a/app/views/pages/_footer.html.erb
+++ b/app/views/pages/_footer.html.erb
@@ -1,2 +1,2 @@
  </br></br>
- <center><p><a href="/">©2018 PRDY | A Product Manager's Tool | Built with <span class="glyphicon glyphicon-heart"></span> in Detroit</a></p></center>
+ <center><p><a href="/">©2018 PRDY | A Product Manager's Tool <br> Built with <span class="glyphicon glyphicon-heart"></span> in Detroit</a></p></center>
