--- a/app/views/docs/show.html.erb
+++ b/app/views/docs/show.html.erb
@@ -4,7 +4,7 @@
 
 <div class = "panel panel-default">
   <div class = "panel-heading">
-    <h1><%= @doc.title %> - <%=@doc.qaOwner%></h1>
+    <h1><%= @doc.title %> - <span class="badge badge-pill badge-primary"><%=@doc.qaOwner%></span></h1>
 </div>
   <div class = "panel-body">
 <div class="form-group col-md-2 mb-3 ">
