--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -14,6 +14,9 @@ $jumbotron-bg:                     white;
 .center {
      text-align: center;
 }
+.bootstrap-tagsinput {
+    width: 100%;
+}
 
 .navbar-brand {
      font-weight: bold;
